[package]
name = "lme2s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.4", features = ["serde-1"] }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
n_to_n = { path = "./n_to_n" }
rayon = "1.8.0"
lazy_static = "1.4.0"

[workspace]
members = ["n_to_n"]
